---
config:
  layout: elk
  theme: redux-dark-color
---
erDiagram
    User ||--o{ Place : has
    User ||..o{ Review : leaves
    Place ||--o{ Place_Amenity : "has/have"
    Place_Amenity }o--|| Amenity : "found in"
    Place ||--o{ Review : receives
User[User]:::fontClassName {
    str(36) id PK
    str first_name
    str last_name
    str email UK
    str password "HASHED"
    bool is_admin
}
Place[Place]:::fontClassName {
    str(36) id PK
    str title
    str description "NULLABLE"
    float price
    float latitude
    float longitude
    str(36) owner_id FK "User.id"
}
Review[Review]:::fontClassName {
    str(36) id PK
    str text
    int rating
    str(36) user_id FK "User.id"
    str(36) place_id FK "Place.id"
}
Amenity[Amenity]:::fontClassName {
    str(36) id PK
    str name UK
}
Place_Amenity[Place_Amenity]:::fontClassName {
    str(36) place_id PK,FK "Place.id"
    str(36) amenity_id PK,FK "Amenity.id"
}
classDef default fontClassName font-size:12pt